dev/non_executable_reasons_record_from_random_10k/6595.txt
3.6
An error occurred while executing the following cell:
------------------
1.upper()
------------------

[0;36m  File [0;32m"<ipython-input-21-02adcf0a0b2a>"[0;36m, line [0;32m1[0m
[0;31m    1.upper()[0m
[0m          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-21-02adcf0a0b2a>, line 1)

Executability                            : False
